# coin_trading

./: .env.example  Makefile  README.md  pyproject.toml
agents/: baselines.py  policy_wrapper.py  sb3_ppo.py  sb3_sac.py
config/: default.yaml  loader.py  schema.py
data/: downloader.py  io.py  validator.py
docs/: CODEBASE_FUNCTION_MAP.md  IMPLEMENTATION_STATUS.md  README.md
env/: execution_model.py  recorder.py  reward.py  spaces.py  trading_env.py
execution/: marketdata.py  orders.py  reconcile.py  risk.py  state.py
features/: common.py  offline.py  online.py  parity_test.py
integrations/: binance_rest.py  binance_ws_market.py  binance_ws_user.py  telegram.py
monitoring/: alerts.py  drift.py  metrics.py
pipelines/: run_manager.py  test.py  trade.py  train.py
tests/: conftest.py  test_backtest_invariants.py  test_backtest_trace_visualization.py  test_binance_ws_market.py  test_data_validator.py  test_e2e_backtest.py  test_e2e_paper.py  test_env_execution.py  test_execution_orders_risk.py  test_execution_risk_orders.py  test_features_parity.py  test_integrations_user_stream.py  test_integrations_user_telegram.py  test_marketdata_loop.py  test_marketdata_ws.py  test_monitoring.py  test_policy_wrapper.py  test_reconcile.py  test_reporting.py  test_run_doctor.py  test_run_manager.py  test_telegram_sender.py  test_trade_pipeline.py  test_trade_run_forever.py  test_trade_runtime_flow.py  test_trade_runtime_loop.py  test_train_device_resolution.py  test_train_pipeline.py  test_train_pipeline_smoke.py  test_train_pipeline_smoke_dependency.py  (+4 more)
(+257 files in other folders)
